--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https:CodePhilanthropist.github.io/Monsters-Rolodex",
+  "homepage": "https://CodePhilanthropist.github.io/Monsters-Rolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
